src/test/deca/syntax/invalid/provided/ErreurSyntaxe1.deca
// Description:
//   Print string sans fermer la parenthèse
//
// Résultats:
//   :3:12: token recognition error at: '"anaaaaas);\n}'
{
    println("anaaaaas);
}
